[gd_scene load_steps=12 format=2]

[ext_resource path="res://Themes/Fonts/markazi_text_24pt.tres" type="DynamicFont" id=2]
[ext_resource path="res://Themes/StyleBoxes/CardFront.tres" type="StyleBox" id=3]
[ext_resource path="res://Managers/StatusIcons/StatusIconManager.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/PlayerInterface/BattleBoard/PlayerBoard/HealthMeter/HealthMeter.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/PlayerInterface/BattleBoard/ActionsBoard/CharacterActionsInterface/CharacterActionsInterface.gd" type="Script" id=6]
[ext_resource path="res://Managers/Cards/CardContainer/OpportunitiesContainer/OpportunitiesContainter.tscn" type="PackedScene" id=7]
[ext_resource path="res://Themes/StyleBoxes/Glows/WhiteGlowOutlineStyleBox.tres" type="StyleBox" id=8]
[ext_resource path="res://Scenes/PlayerInterface/BattleBoard/ActionsBoard/CharacterActionsInterface/AudioStreamPlayers/StabAudioStreamPlayer2D.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/PlayerInterface/BattleBoard/ActionsBoard/CharacterActionsInterface/AudioStreamPlayers/ClankAudioStreamPlayer2D.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scenes/PlayerInterface/BattleBoard/ActionsBoard/CharacterActionsInterface/AudioStreamPlayers/ShieldAudioStreamPlayer2D.tscn" type="PackedScene" id=11]
[ext_resource path="res://Themes/StyleBoxes/CharacterBar/CharacterBarStyleBox.tres" type="StyleBox" id=12]

[node name="CharacterActionsInterface" type="Control"]
margin_right = 244.0
margin_bottom = 440.0
rect_min_size = Vector2( 244, 440 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}
stab_audio_scene = ExtResource( 9 )
clank_audio_scene = ExtResource( 10 )
shield_audio_scene = ExtResource( 11 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
custom_constants/margin_right = 2
custom_constants/margin_left = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 2.0
margin_right = 242.0
margin_bottom = 444.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Panel" type="Panel" parent="MarginContainer/VBoxContainer"]
margin_right = 240.0
margin_bottom = 64.0
rect_min_size = Vector2( 0, 64 )
mouse_filter = 2
size_flags_horizontal = 3
custom_styles/panel = ExtResource( 3 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 3
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="MarginContainer/VBoxContainer/Panel/MarginContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 232.0
margin_bottom = 56.0
mouse_filter = 2
size_flags_horizontal = 3
custom_styles/panel = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/Panel/MarginContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 3
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Panel/MarginContainer/Panel/MarginContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 216.0
margin_bottom = 40.0
size_flags_horizontal = 3

[node name="NicknameLabel" type="Label" parent="MarginContainer/VBoxContainer/Panel/MarginContainer/Panel/MarginContainer/HBoxContainer"]
margin_right = 80.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.156863, 0.156863, 0.156863, 1 )
text = "Name"
align = 1

[node name="HealthMeter" parent="MarginContainer/VBoxContainer/Panel/MarginContainer/Panel/MarginContainer/HBoxContainer" instance=ExtResource( 5 )]
anchor_top = 0.0
anchor_bottom = 0.0
margin_left = 84.0
margin_top = 0.0
margin_right = 208.0
margin_bottom = 32.0
size_flags_vertical = 3

[node name="StatusesMargin" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 68.0
margin_right = 240.0
margin_bottom = 104.0
rect_min_size = Vector2( 0, 24 )
size_flags_horizontal = 3
custom_constants/margin_right = 8
custom_constants/margin_left = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatusIconManager" parent="MarginContainer/VBoxContainer/StatusesMargin" instance=ExtResource( 4 )]
margin_left = 8.0
margin_right = 232.0
margin_bottom = 36.0
alignment = 2

[node name="OpeningsMargin" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 108.0
margin_right = 240.0
margin_bottom = 444.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 8
custom_constants/margin_left = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OpportunitiesContainter" parent="MarginContainer/VBoxContainer/OpeningsMargin" instance=ExtResource( 7 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 8.0
margin_top = 0.0
margin_right = 232.0
margin_bottom = 336.0

[node name="ActivePanel" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = ExtResource( 8 )
[connection signal="status_forgotten" from="MarginContainer/VBoxContainer/StatusesMargin/StatusIconManager" to="." method="_on_StatusIconManager_status_forgotten"]
[connection signal="status_inspected" from="MarginContainer/VBoxContainer/StatusesMargin/StatusIconManager" to="." method="_on_StatusIconManager_status_inspected"]
[connection signal="update_opportunity" from="MarginContainer/VBoxContainer/OpeningsMargin/OpportunitiesContainter" to="." method="_on_OpportunitiesContainter_update_opportunity"]
